2004-03-02  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>

	* src/display/nr-arena-shape.cpp (nr_arena_shape_set_path):
	Remove affine argument (all current callers were passing NULL) and
	unused `lieutenant' argument.  Update callers.

	* src/selection-chemistry.h, src/selection-chemistry.cpp
	(sp_selection_delete, sp_selection_duplicate, sp_edit_clear_all,
	sp_edit_select_all, sp_selection_group, sp_selection_ungroup,
	sp_selection_raise, sp_selection_raise_to_top, sp_selection_lower,
	sp_selection_lower_to_bottom, sp_selection_cut, sp_selection_copy,
	sp_selection_paste, sp_selection_paste_style):
	Remove unused parameters.  Update callers.

2004-03-01  Nathan Hurst <njh@mail.csse.monash.edu.au>

	* src/draw-context.cpp: Fixed edge case in freehand tool.  Added
	comment about curve fitting.

2004-03-01  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>

	* src/sp-guide.cpp (sp_guide_set_property, sp_guide_get_property):
	Minor cleanups.

	* src/interface.h, src/interface.cpp
	(sp_ui_new_view, sp_ui_new_view_preview): Make static.

	* src/dyna-draw-context.cpp (sp_ddc_defaults):
	* src/rect-context.cpp (sp_rc_defaults): 
	Cleanup: Use table and loop instead of copy&paste.

	* configure.in: If -Wno-unused-parameter isn't recognized (g++ 3.2 and
	earlier) then use -Wno-unused.

	* src/libnr/nr-point.h: NR::Point: Add explicit copy constructor and
	operator= in the hope of fixing #907059.

	* src/desktop-events.cpp (sp_dt_ruler_event): NR::Point'ification.

	* src/selection.cpp (sp_selection_item_selected):
	* src/seltrans.cpp (sp_sel_trans_stretch_request):
	* src/display/nr-arena-shape.cpp (shape_run_A8_OR):
	* src/livarot/PathStroke.cpp (DoJoin):
	* src/livarot/ShapeMisc.cpp (ReFormeBezierTo):
	Address compiler warnings.

2004-02-28  Jon Phillips <jon@protofunk.org>

	* share/*: Move extensions, icons, and made a new folder screens
	for screens that are pulled up in using inkscape.  Please test
	this heavily as it implements the most troublesome chunks of the